# pastebin_litee

./: .gitignore  README.md  docker-compose.yml
backend/: background_tasks.py  config.py  database.py  main.py  model.py  orm.py  pyproject.toml  requirements.txt  routes.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: b542ac2a2c0f_initial_tables.py
frontend/: .dockerignore  Dockerfile  README.md  index.html
frontend/src/app/: routes.tsx
frontend/src/app/pages/: CreatePaste.tsx  SuccessPage.tsx  ViewPaste.tsx
frontend/src/app/utils/: api.ts
